# epidemiological-datasets

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECDC_DATA_SOURCES.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: labeler.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_data_source.yml
.github/workflows/: ci.yml  issue-management.yml  setup-discussions.yml
config/: README.md  cdsapi.env.example  mosqlimate.env.example
docs/: changelog.md  contributing.md  index.md
docs/api/: base.md  cli.md  index.md  registry.md  utils.md
docs/docs/: installation.md  quickstart.md
docs/docs/examples/: 02_who_global_health_data.ipynb  07_Eurostat_EU_Health_Data.ipynb  11_Global_Health_Linelist_Data.ipynb  13_HealthData_Gov_US_Health_System.ipynb  15_China_CDC_Weekly_Surveillance.ipynb  cdc_opendata_example.ipynb
docs/docs/sources/: africa_cdc.md  cdc_opendata.md  china_cdc.md  ecdc.md  epipulse.md  eurostat.md  healthdata_gov.md  paho.md  pathoplexus.md  ukhsa.md
docs/examples/: 04_ecdc_european_surveillance.ipynb  05_multi_source_comparison.ipynb  06_PAHO_Pan_American_Data.ipynb  07_Eurostat_EU_Health_Data.ipynb  08_OWID_Our_World_in_Data.ipynb  09_Colombia_INS_SIVIGILA_Data.ipynb  10_Africa_CDC_Data.ipynb  11_CDC_Open_Data_Examples.ipynb  11_Global_Health_Linelist_Data.ipynb  12_UKHSA_Surveillance_Data.ipynb  13_HealthData_Gov_US_Health_System.ipynb  14_RKI_Germany_Surveillance_Data.ipynb  15_China_CDC_Weekly_Surveillance.ipynb  16_India_IDSP_Surveillance_Data.ipynb  17_EMRO_Health_Indicators_Analysis.ipynb  19_Pathoplexus_Genomic_Data.ipynb  20_Dengue_Integracao_InfoDengue_Pathoplexus.ipynb  21_Copernicus_CDS_Examples.ipynb  22_Malaria_Atlas_Examples.ipynb  cdc_opendata_example.ipynb  ecdc_opendata_example.ipynb  emro_health_analysis.ipynb  epipulse_example.ipynb  respicast_example.ipynb
docs/sources/: colombia_ins.md  copernicus_cds.md  datasus.md  global_health.md  index.md  india_idsp.md  infodengue.md  malaria_atlas.md  owid.md  paho.md  respicast.md  rki.md  who.md
examples/: README.md  epipulse_example.ipynb  requirements.txt
examples/notebooks/: 01_pysus_brazilian_health_data.ipynb  02_who_global_health_data.ipynb  03_world_bank_health_indicators.ipynb  04_ecdc_european_surveillance.ipynb  05_multi_source_comparison.ipynb  06_PAHO_Pan_American_Data.ipynb  07_Eurostat_EU_Health_Data.ipynb  08_OWID_Our_World_in_Data.ipynb  09_Colombia_INS_SIVIGILA_Data.ipynb  10_Africa_CDC_Data.ipynb  11_Global_Health_Linelist_Data.ipynb  12_UKHSA_Surveillance_Data.ipynb  13_HealthData_Gov_US_Health_System.ipynb  14_RKI_Germany_Surveillance_Data.ipynb  15_China_CDC_Weekly_Surveillance.ipynb  16_India_IDSP_Surveillance_Data.ipynb  17_EMRO_Health_Indicators_Analysis.ipynb  19_Pathoplexus_Genomic_Data.ipynb  20_Dengue_Integracao_InfoDengue_Pathoplexus.ipynb  21_Copernicus_CDS_Examples.ipynb  22_Malaria_Atlas_Examples.ipynb  emro_health_analysis.ipynb
issues/: issue_ecdc_atlas.md  issue_epipulse.md  issue_erviss.md  issue_esac_net.md  issue_respicast.md
notebooks/examples/: README.md
scripts/: __init__.py  utils.py
scripts/accessors/: __init__.py  africa_cdc.py  cdc_opendata.py  china_cdc.py  colombia_ins.py  copernicus_cds.py  datasus_pysus.py  ecdc_opendata.py  epipulse.py  eurostat.py  global_health.py  healthdata_gov.py  india_idsp.py  infodengue_api.py  malaria_atlas.py  nz_health.py  owid.py  paho.py  pathoplexus.py  respicast.py  rki_germany.py  ukhsa.py  who.py  who_ghoclient.py
src/epi_data/: __init__.py
src/epi_data/sources/: __init__.py
src/epidatasets/: __init__.py  _base.py  _registry.py  cli.py
src/epidatasets/sources/: __init__.py  africa_cdc.py  cdc_opendata.py  china_cdc.py  colombia_ins.py  copernicus_cds.py  datasus_pysus.py  ecdc_opendata.py  epipulse.py  eurostat.py  global_health.py  healthdata_gov.py  india_idsp.py  infodengue_api.py  malaria_atlas.py  owid.py  paho.py  pathoplexus.py  respicast.py  rki_germany.py  ukhsa.py  who_ghoclient.py
src/epidatasets/utils/: __init__.py  cache.py  geo.py  io.py  rate_limit.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_accessors.py  test_basic.py  test_init.py  test_registry.py  test_utils.py
